--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
-{% block title %}Yoga Classes{% endblock %}
+{% block title %}Good Vibes Yoga{% endblock %}
 
 {% block content %}
 <h1>Good Vibes Yoga</h1>
-<div class="container">
+<div class="container d-block mx-auto my-5">
     <div class="row">
 
     <div class="col-xs-12 col-sm-6 col-lg-4 col-xlg-3">
         <!-- <h2>Good Vibes Yoga</h2> -->
 
        <figure>
-           <img class= "dino-image img-fluid" src="{{url_for('static', filename='images/' + dinosaurs[dino]['image'])}}" alt="{{dino}}">
-           <!-- <figcaption>{{dinosaurs[dino]['image-credit']}}</figcaption> -->
+           <img class="img-fluid d-block mx-auto my-5" src="static/images/yoga_pic.jpg" alt="Yoga logo">
+           
        </figure>
-     
+       <p>
+           <h2>About us</h2>
+           We are a yoga studio located on the Moon that looks to offer the Moon commuinity with all types of yoga.
+       </p>
        </div>
-       <button type="submit" value="Submit">Go to classes</button>
+       <a class="btn btn-primary btn-lg" href="/classes" role="button">Go to classes</a>
     </div>
 </div>
 {% endblock %}
