--- a/templates/class.html
+++ b/templates/class.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}About {{yoga_class}}{% endblock %}
+{% block title %}About {{yoga_class['name']}}{% endblock %}
 
 {% block content %}
 </br>
@@ -8,14 +8,69 @@
 </br>
 </br>
 
+<div class="container justify-center-content">
+    <div class="row">
+      <div class="col">
+        <b>Name:</b> 
+      </div>
+      <div class="col-10">
+        {{yoga_class['name']}} 
+      </div>
+    </div>
+    <div class="row">
+        <div class="col">
+          <b>Type:</b> 
+        </div>
+        <div class="col-10">
+          {{yoga_class['type']}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <b>Level:</b> 
+        </div>
+        <div class="col-10">
+          {{yoga_class['level']}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <b>Date:</b> 
+        </div>
+        <div class="col-10">
+          {{yoga_class['date']}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <b>Duration:</b> 
+        </div>
+        <div class="col-10">
+          {{yoga_class['duration']}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <b>Trainer:</b> 
+        </div>
+        <div class="col-10">
+          {{yoga_class['trainer']}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <b>Description:</b> 
+        </div>
+        <div class="col-10">
+          {{yoga_class['description']}} 
+        </div>
+      </div>
+</div>
+</br>
+</br>
 
-<h1>{{yoga_class['name']}}</h1>
-<p>{{yoga_class['type']}}
-    {{yoga_class['duration']}}
-    {{yoga_class['level']}}
-    {{yoga_class['description']}}
-    {{yoga_class['trainer']}}
-</p>
-<a class="btn btn-primary btn-lg" href="{{url_for('edit_class',class_id=class_id)}}" role="button">Edit class</a>
-
+<div class="d-flex justify-content-center">
+<a class="btn btn-primary btn-lg" href="{{url_for('edit_class',class_id=class_id)}}" role="button">Edit Class</a>
+<p> <t></t></p><a class="btn btn-danger btn-lg" href="" role="button">Delete Class</a>
+</div>
 {% endblock %}
