--- a/templates/class_form.html
+++ b/templates/class_form.html
@@ -14,7 +14,7 @@
 </br>
 
 </br>
-
+    <!-- Form info titles and submissons -->
     <form method="post" name="classes/create">
     <div class="container justify-center-content">
         <div>
@@ -98,7 +98,7 @@
             </div>
         </br>
         </div>
-        
+        <!-- Submit and reset buttons -->
         <button type="submit" value="Submit">Submit</button>
         <button type="reset" value="reset">Reset</button>
         
