--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,20 @@
 </br>
 </br>
 </br>
+
 <div class="d-flex justify-content-center">
 <h1>Good Vibes Yoga</h1>
 </div>
 </br>
 <div class="container">
    <div class="row">
-
+    <!-- Main image -->
        <figure>
            <img class="img-fluid d-block mx-auto my-5" src="static/images/yoga_pic.jpg" style="max-width:20%;" alt="Yoga logo">
            
        </figure>
    </div>
+   <!-- About portion -->
    <div class="row text-center">
            <h2>About us</h2>
    </div>
@@ -29,6 +31,7 @@
    </div>
    </div>
 </div>
+<!-- Button to go to classes page -->
 <div class="d-flex justify-content-center">
        <a class="btn btn-primary btn-lg" href="{{url_for('classes',classes=classes)}}" role="button">Go to classes</a>
 </div>
