--- a/templates/class.html
+++ b/templates/class.html
@@ -1,3 +1,4 @@
+<!-- Individual Class Page -->
 {% extends "base.html" %}
 
 {% block title %}About {{yoga_class['name']}}{% endblock %}
@@ -7,7 +8,7 @@
 </br>
 </br>
 </br>
-
+<!-- Inormation type and information ex: Name: Sunrise Stretch -->
 <div class="container justify-center-content">
     <div class="row">
       <div class="col">
@@ -68,7 +69,7 @@
 </div>
 </br>
 </br>
-
+<!-- Button for edit (goes to edit form page) and delete(goes nowhere) -->
 <div class="d-flex justify-content-center">
 <a class="btn btn-primary btn-lg" href="{{url_for('edit_class',class_id=class_id)}}" role="button">Edit Class</a>
 <p> <t></t></p><a class="btn btn-danger btn-lg" href="" role="button">Delete Class</a>
